# CppProjectTemplate

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json
cmake/: Coverage.cmake  StaticAnalysis.cmake  toolchain.cmake
docs/: make.bat
docs/source/: conf.py  index.rst
src/: CMakeLists.txt  main.cpp
src/lib/: CMakeLists.txt  lib.cpp  lib.hpp
tests/: CMakeLists.txt  libTests.cpp
tests/lib/: CMakeLists.txt  libTests.cpp
